--- a/makechange.html
+++ b/makechange.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html ng-app="makeChangeApp">
 <head>
-	<title></title>
+	<title>Change Making Application</title>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 
 	<script type="text/javascript" src="makechange.js"></script>
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body ng-controller="makeChangeController">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
 
-	<input type="number" ng-model="billAmount"> Bill Amount
-	<input type="number" ng-model="amountGiven"> Amount Given
-	<button ng-click="makeChange()">Make Change</button>
-	<div>Quarters: {{quarters}}</div>
-	<div>Dimes: {{dimes}}</div>
-	<div>Nickels: {{nickels}}</div>
-	<div>Pennies: {{pennies}}</div>
+				<input type="number" ng-model="billAmount"> Bill Amount
+				<input type="number" ng-model="amountGiven"> Amount Given
+				<button class="btn btn-primary" ng-click="makeChange()">Make Change</button>
+				<div ng-show="quarters">Quarters: {{quarters}} <img ng-src="{{quarter}}"></div>
+				<div ng-show="dimes">Dimes: {{dimes}} <img ng-src="{{dime}}"></div>
+				<div ng-show="nickels">Nickels: {{nickels}} <img ng-src="{{nickel}}"></div>
+				<div ng-show="pennies">Pennies: {{pennies}} <img ng-src="{{penny}}"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
